[package]
name = "yoctoprint"
version = "0.1.0"
edition = "2021"

[dependencies]
serialport = "4.2.0"
regex = "1.6.0"
lazy_static = "1.4.0"
crossbeam = "0.8.2"
dirs = "4.0.0"
rand = "0.8.5"
enumset = "1.0.12"
serde = { version = "1.0", features = ["derive"] }
rocket_cors = { git = "https://github.com/lawliet89/rocket_cors", branch = "master" }
log = "0.4.17"
simple_logger = "4.0.0"
assert_approx_eq = "1.1.0"
clap = {version= "4.0.32", features=["derive"]}
daemonize = "0.4.1"

[dependencies.rocket]
version = "0.5.0-rc.2"
features = ["json"]